[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WElib"
version = "0.0.1"
authors = [
  { name="Charlie Laughton", email="charles.laughton@nottingham.ac.uk" },
]
description = "A small library of building blocks to construct Weighted Ensemble simulations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://bitbucket.org/claughton/WElib.git"
